--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div data-aos="fade-left" data-aos-duration="1500" class="home-image">
-        <img src="/img/home.png" class="" />
+        <img src="img/home.png" class="" />
       </div>
     </section>
     <!-- home end -->
@@ -214,7 +214,7 @@
         data-aos-duration="1500"
         class="about-img md:flex-1 md:order-1 md:pb-28"
       >
-        <img src="/img/about.png" />
+        <img src="img/about.png" />
       </div>
     </section>
     <!-- about end -->
@@ -247,7 +247,7 @@
           class="max-w-sm mb-3 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
         >
           <a href="#">
-            <img class="mx-auto rounded-t-lg" src="/img/gmf.jpg" />
+            <img class="mx-auto rounded-t-lg" src="img/gmf.jpg" />
           </a>
           <div class="p-5">
             <a href="#">
@@ -269,7 +269,7 @@
           class="max-w-sm mb-3 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
         >
           <a href="#">
-            <img class="mx-auto rounded-t-lg" src="/img/meiwa.jpg" />
+            <img class="mx-auto rounded-t-lg" src="img/meiwa.jpg" />
           </a>
           <div class="p-5">
             <a href="#">
@@ -291,7 +291,7 @@
           class="max-w-sm mb-3 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
         >
           <a href="#">
-            <img class="mx-auto rounded-t-lg" src="/img/AVI.jpg" />
+            <img class="mx-auto rounded-t-lg" src="img/AVI.jpg" />
           </a>
           <div class="p-5">
             <a href="#">
@@ -314,7 +314,7 @@
           class="max-w-sm mb-3 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
         >
           <a href="#">
-            <img class="mx-auto rounded-t-lg" src="/img/laravel.jpg" />
+            <img class="mx-auto rounded-t-lg" src="img/laravel.jpg" />
           </a>
           <div class="p-5">
             <a href="#">
@@ -359,43 +359,43 @@
         <div data-aos="flip-left" data-aos-duration="1500">
           <img
             class="grayscale hover:grayscale-0 h-auto max-w-full rounded-lg"
-            src="/img/htmlcssjs.jpg"
+            src="img/htmlcssjs.jpg"
           />
         </div>
         <div data-aos="flip-left" data-aos-duration="1500">
           <img
             class="grayscale hover:grayscale-0 h-auto max-w-full rounded-lg"
-            src="/img/bootstrap.jpg"
+            src="img/bootstrap.jpg"
           />
         </div>
         <div data-aos="flip-left" data-aos-duration="1500">
           <img
             class="grayscale hover:grayscale-0 h-auto max-w-full rounded-lg"
-            src="/img/tailwind.jpg"
+            src="img/tailwind.jpg"
           />
         </div>
         <div data-aos="flip-left" data-aos-duration="1500">
           <img
             class="grayscale hover:grayscale-0 h-auto max-w-full rounded-lg"
-            src="/img/mysql.png"
+            src="img/mysql.png"
           />
         </div>
         <div data-aos="flip-left" data-aos-duration="1500">
           <img
             class="grayscale hover:grayscale-0 h-auto max-w-full rounded-lg"
-            src="/img/php.png"
+            src="img/php.png"
           />
         </div>
         <div data-aos="flip-left" data-aos-duration="1500">
           <img
             class="grayscale hover:grayscale-0 h-auto max-w-full rounded-lg"
-            src="/img/laravel.png"
+            src="img/laravel.png"
           />
         </div>
         <div data-aos="flip-left" data-aos-duration="1500">
           <img
             class="grayscale hover:grayscale-0 h-auto max-w-full rounded-lg"
-            src="/img/git.png"
+            src="img/git.png"
           />
         </div>
       </div>
