--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
     <!-- script -->
     <script src="script/script.js"></script>
     <!-- script flowbite-->
-    <script src="node_modules/flowbite/dist/flowbite.min.js""></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.1.1/flowbite.min.js"></script>
     <!-- animate -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
