--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- animate -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- style -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.1.1/flowbite.min.css" rel="stylesheet" />
     <link href="css/output.css" rel="stylesheet" />
   </head>
   <body class="font-poppins dark:bg-gray-800">
